更新生成文件,同步apollo配置
