# openadk/models/visions_photo_response.py
@@ -16,8 +16,10 @@ import re  # noqa: F401
 
 import six
 
+from openadk.models.name import Name  # noqa: F401,E501
 
-class VisionsPutResponse(object):
+
+class VisionsPhotoResponse(object):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
@@ -32,7 +34,7 @@ class VisionsPutResponse(object):
     """
     swagger_types = {
         'code': 'int',
-        'data': 'object',
+        'data': 'Name',
         'msg': 'str'
     }
 
@@ -43,7 +45,7 @@ class VisionsPutResponse(object):
     }
 
     def __init__(self, code=None, data=None, msg=None):  # noqa: E501
-        """VisionsPutResponse - a model defined in Swagger"""  # noqa: E501
+        """VisionsPhotoResponse - a model defined in Swagger"""  # noqa: E501
 
         self._code = None
         self._data = None
@@ -57,22 +59,22 @@ class VisionsPutResponse(object):
 
     @property
     def code(self):
-        """Gets the code of this VisionsPutResponse.  # noqa: E501
+        """Gets the code of this VisionsPhotoResponse.  # noqa: E501
 
         错误码  # noqa: E501
 
-        :return: The code of this VisionsPutResponse.  # noqa: E501
+        :return: The code of this VisionsPhotoResponse.  # noqa: E501
         :rtype: int
         """
         return self._code
 
     @code.setter
     def code(self, code):
-        """Sets the code of this VisionsPutResponse.
+        """Sets the code of this VisionsPhotoResponse.
 
         错误码  # noqa: E501
 
-        :param code: The code of this VisionsPutResponse.  # noqa: E501
+        :param code: The code of this VisionsPhotoResponse.  # noqa: E501
         :type: int
         """
         if code is None:
@@ -82,43 +84,45 @@ class VisionsPutResponse(object):
 
     @property
     def data(self):
-        """Gets the data of this VisionsPutResponse.  # noqa: E501
+        """Gets the data of this VisionsPhotoResponse.  # noqa: E501
 
+        拍摄的照片名  # noqa: E501
 
-        :return: The data of this VisionsPutResponse.  # noqa: E501
-        :rtype: object
+        :return: The data of this VisionsPhotoResponse.  # noqa: E501
+        :rtype: Name
         """
         return self._data
 
     @data.setter
     def data(self, data):
-        """Sets the data of this VisionsPutResponse.
+        """Sets the data of this VisionsPhotoResponse.
 
+        拍摄的照片名  # noqa: E501
 
-        :param data: The data of this VisionsPutResponse.  # noqa: E501
-        :type: object
+        :param data: The data of this VisionsPhotoResponse.  # noqa: E501
+        :type: Name
         """
 
         self._data = data
 
     @property
     def msg(self):
-        """Gets the msg of this VisionsPutResponse.  # noqa: E501
+        """Gets the msg of this VisionsPhotoResponse.  # noqa: E501
 
         错误码消息  # noqa: E501
 
-        :return: The msg of this VisionsPutResponse.  # noqa: E501
+        :return: The msg of this VisionsPhotoResponse.  # noqa: E501
         :rtype: str
         """
         return self._msg
 
     @msg.setter
     def msg(self, msg):
-        """Sets the msg of this VisionsPutResponse.
+        """Sets the msg of this VisionsPhotoResponse.
 
         错误码消息  # noqa: E501
 
-        :param msg: The msg of this VisionsPutResponse.  # noqa: E501
+        :param msg: The msg of this VisionsPhotoResponse.  # noqa: E501
         :type: str
         """
         if msg is None:
@@ -147,7 +151,7 @@ class VisionsPutResponse(object):
                 ))
             else:
                 result[attr] = value
-        if issubclass(VisionsPutResponse, dict):
+        if issubclass(VisionsPhotoResponse, dict):
             for key, value in self.items():
                 result[key] = value
 
@@ -163,7 +167,7 @@ class VisionsPutResponse(object):
 
     def __eq__(self, other):
         """Returns true if both objects are equal"""
-        if not isinstance(other, VisionsPutResponse):
+        if not isinstance(other, VisionsPhotoResponse):
             return False
 
         return self.__dict__ == other.__dict__
